1998-06-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* tech.ent: Use public identifiers.

1998-06-05  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* techmeta.sgml: Replace REVHISTORY with &techrevhistory.

	* tech.ent: Add techrevhistory.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* debug.sgml: Add /SECT2 before Preventing Bugs section.

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Begin revision log.
