@@ -1,3 +1,7 @@
+1998-06-08  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* Makefile.am: New file.
+
 1998-06-06  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* tech.ent: Use public identifiers.
